--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-.authenicationButton {
+.authenticationButton {
   width: 80px;
   background: none;
   border: 1px solid rgb(74, 76, 79);
@@ -23,6 +23,6 @@ code {
   font-weight: 400;
 }
 
-.authenicationButton:hover {
+.authenticationButton:hover {
   border-color: white;
 }
